fix: fixed gap styles

--- a/src/pages/home/style.module.css
+++ b/src/pages/home/style.module.css
@@ -30,6 +30,7 @@
 .bnb_container {
   display: flex;
   flex-wrap: wrap;
+  gap: 1.1rem;
   justify-content: space-around;
 }
 
